# services/admin-api/internal/model/setting.go
@@ -1,0 +1,6 @@
+package model
+
+type FeatureSetting struct {
+	Key     string `json:"key"`
+	Enabled bool   `json:"enabled"`
+}
